[package]
name = "kodadot-nft"
version = "0.1.0"
authors = ['Eliott Teissonniere <git.eliott@teissonniere.org>']
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true}
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

orml-nft = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "master", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
	"sp-std/std",
	"sp-runtime/std",
	"orml-traits/std",
	"orml-nft/std",
]